# vinyld

./: Cargo.toml
migrations/: 1_media.sql  2_artists.sql  3_tracks.sql  4_labels.sql
src/: main.rs
src/config/: error.rs  mod.rs
src/constants/: mod.rs
src/server/: mod.rs
src/server/routes/: mod.rs
src/store/: error.rs  mod.rs  models.rs
src/types/: artist.rs  condition.rs  label.rs  media.rs  mod.rs  track.rs  vinyl.rs
