[package]
name = "vinyld"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = { version = "0.5.16", features = ["http1", "http2", "json", "query", "headers"] }
dotenvy = "0.15.3"
nanoid = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "time" ] }
tokio = { version = "1", features = ["full"] }
toml = "0.5.9"
